--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -31,21 +31,101 @@
  RIV_DEF:0 "Ривия"
  RIV_ADJ:0 "Цинтрийск."
  
- FNP_fascism:0 "Королевство Ривия"
- FNP_fascism_DEF:0 "Королевство Ривия"
+ SOM_fascism:0 "Королевство Соммерда"
+ SOM_fascism_DEF:0 "Королевство Соммерда"
+ SOM_democratic:0 "Консилорат Соммерда"
+ SOM_democratic_DEF:0 "Консилорат Соммерда"
+ SOM_neutrality:1 "Королевство Соммерда"
+ SOM_neutrality_DEF:1 "Королевство Соммерда"
+ SOM_communism:0 "Республика Соммерда"
+ SOM_communism_DEF:0 "Республика Соммерда"
+ SOM_fascism_ADJ:0 "Соммердск."
+ SOM_democratic_ADJ:0 "Соммердск."
+ SOM_neutrality_ADJ:0 "Соммердск."
+ SOM_communism_ADJ:0 "Соммердск."
+ SOM:0 "Соммерда"
+ SOM_DEF:0 "Соммерда"
+ SOM_ADJ:0 "Соммердск."
+ 
+ MJO_fascism:0 "Королевство Мйонир"
+ MJO_fascism_DEF:0 "Королевство Мйонир"
+ MJO_democratic:0 "Консилорат Мйонир"
+ MJO_democratic_DEF:0 "Консилорат Мйонир"
+ MJO_neutrality:1 "Королевство Мйонир"
+ MJO_neutrality_DEF:1 "Королевство Мйонир"
+ MJO_communism:0 "Республика Мйонир"
+ MJO_communism_DEF:0 "Республика Мйонир"
+ MJO_fascism_ADJ:0 "Мйонирск."
+ MJO_democratic_ADJ:0 "Мйонирск."
+ MJO_neutrality_ADJ:0 "Мйонирск."
+ MJO_communism_ADJ:0 "Мйонирск."
+ MJO:0 "Мйонир"
+ MJO_DEF:0 "Мйонир"
+ MJO_ADJ:0 "Мйонирск."
+ 
+ VER_fascism:0 "Королевство Веррас"
+ VER_fascism_DEF:0 "Королевство Веррас"
+ VER_democratic:0 "Консилорат Веррас"
+ VER_democratic_DEF:0 "Консилорат Веррас"
+ VER_neutrality:1 "Королевство Веррас"
+ VER_neutrality_DEF:1 "Королевство Веррас"
+ VER_communism:0 "Республика Веррас"
+ VER_communism_DEF:0 "Республика Веррас"
+ VER_fascism_ADJ:0 "Веррасск."
+ VER_democratic_ADJ:0 "Веррасск."
+ VER_neutrality_ADJ:0 "Веррасск."
+ VER_communism_ADJ:0 "Веррасск."
+ VER:0 "Веррас"
+ VER_DEF:0 "Веррас"
+ VER_ADJ:0 "Веррасск."
+ 
+ SAP_fascism:0 "Королевство Сапир"
+ SAP_fascism_DEF:0 "Королевство Сапир"
+ SAP_democratic:0 "Консилорат Сапир"
+ SAP_democratic_DEF:0 "Консилорат Сапир"
+ SAP_neutrality:1 "Королевство Сапир"
+ SAP_neutrality_DEF:1 "Королевство Сапир"
+ SAP_communism:0 "Республика Сапир"
+ SAP_communism_DEF:0 "Республика Сапир"
+ SAP_fascism_ADJ:0 "Сапирск."
+ SAP_democratic_ADJ:0 "Сапирск."
+ SAP_neutrality_ADJ:0 "Сапирск."
+ SAP_communism_ADJ:0 "Сапирск."
+ SAP:0 "Сапир"
+ SAP_DEF:0 "Сапир "
+ SAP_ADJ:0 "Сапирск."
+ 
+ NOC_fascism:0 "Королевство Ноцето"
+ NOC_fascism_DEF:0 "Королевство Ноцето"
+ NOC_democratic:0 "Консилорат Ноцето"
+ NOC_democratic_DEF:0 "Консилорат Ноцето"
+ NOC_neutrality:1 "Королевство Ноцето"
+ NOC_neutrality_DEF:1 "Королевство Ноцето"
+ NOC_communism:0 "Республика Ноцето"
+ NOC_communism_DEF:0 "Республика Ноцето"
+ NOC_fascism_ADJ:0 "Ноцетск."
+ NOC_democratic_ADJ:0 "Ноцетск."
+ NOC_neutrality_ADJ:0 "Ноцетск."
+ NOC_communism_ADJ:0 "Ноцетск."
+ NOC:0 "Ноцето"
+ NOC_DEF:0 "Ноцето "
+ NOC_ADJ:0 "Ноцетск."
+ 
+ FNP_fascism:0 "Королевство Ноцето "
+ FNP_fascism_DEF:0 "Королевство Ноцето "
  FNP_democratic:0 "Федерация Северных Провинций"
  FNP_democratic_DEF:0 "Федерация Северных Провинций"
- FNP_neutrality:1 "Королевство Ривия"
- FNP_neutrality_DEF:1 "Королевство Ривия"
- FNP_communism:0 "Республика Ривия"
- FNP_communism_DEF:0 "Республика Ривия"
- FNP_fascism_ADJ:0 "Цинтрийск."
- FNP_democratic_ADJ:0 "Цинтрийск."
- FNP_neutrality_ADJ:0 "Цинтрийск."
- FNP_communism_ADJ:0 "Цинтрийск."
- FNP:0 "Ривия"
- FNP_DEF:0 "Ривия"
- FNP_ADJ:0 "Цинтрийск."
+ FNP_neutrality:1 "Королевство Ноцето "
+ FNP_neutrality_DEF:1 "Королевство Ноцето "
+ FNP_communism:0 "Республика Ноцето "
+ FNP_communism_DEF:0 "Республика Ноцето "
+ FNP_fascism_ADJ:0 "Ноцетоск."
+ FNP_democratic_ADJ:0 "Ноцетоск."
+ FNP_neutrality_ADJ:0 "Ноцетоск."
+ FNP_communism_ADJ:0 "Ноцетоск."
+ FNP:0 "Ноцето "
+ FNP_DEF:0 "Ноцето "
+ FNP_ADJ:0 "Ноцетоск."
  
  GSO_fascism:0 "Королевство Гесо"
  GSO_fascism_DEF:0 "Королевство Гесо"
@@ -55,29 +135,29 @@
  GSO_neutrality_DEF:1 "Королевство Гесо"
  GSO_communism:0 "Республика Гесо"
  GSO_communism_DEF:0 "Республика Гесо"
- GSO_fascism_ADJ:0 "Цинтрийск."
- GSO_democratic_ADJ:0 "Цинтрийск."
- GSO_neutrality_ADJ:0 "Цинтрийск."
- GSO_communism_ADJ:0 "Цинтрийск."
+ GSO_fascism_ADJ:0 "Ноцетоск."
+ GSO_democratic_ADJ:0 "Ноцетоск."
+ GSO_neutrality_ADJ:0 "Ноцетоск."
+ GSO_communism_ADJ:0 "Ноцетоск."
  GSO:0 "Гесо"
  GSO_DEF:0 "Гесо"
- GSO_ADJ:0 "Цинтрийск."
+ GSO_ADJ:0 "Ноцетоск."
  
  MTN_fascism:0 "Королевство Гесо"
  MTN_fascism_DEF:0 "Королевство Гесо"
- MTN_democratic:0 "Центральнонордалическая Конфедерация"
- MTN_democratic_DEF:0 "Центральнонордалическая Конфедерация"
+ MTN_democratic:0 "Метина"
+ MTN_democratic_DEF:0 "Метина"
  MTN_neutrality:1 "Королевство Гесо"
  MTN_neutrality_DEF:1 "Королевство Гесо"
  MTN_communism:0 "Республика Гесо"
  MTN_communism_DEF:0 "Республика Гесо"
- MTN_fascism_ADJ:0 "Цинтрийск."
- MTN_democratic_ADJ:0 "Цинтрийск."
- MTN_neutrality_ADJ:0 "Цинтрийск."
- MTN_communism_ADJ:0 "Цинтрийск."
+ MTN_fascism_ADJ:0 "Ноцетоск."
+ MTN_democratic_ADJ:0 "Ноцетоск."
+ MTN_neutrality_ADJ:0 "Ноцетоск."
+ MTN_communism_ADJ:0 "Ноцетоск."
  MTN:0 "Гесо"
  MTN_DEF:0 "Гесо"
- MTN_ADJ:0 "Цинтрийск."
+ MTN_ADJ:0 "Ноцетоск."
  
  SKU_fascism:0 "Королевство Каэдвен"
  SKU_fascism_DEF:0 "Королевство Каэдвен"
@@ -97,8 +177,8 @@
  
  AED_fascism:0 "Королевство Аэдирн"
  AED_fascism_DEF:0 "Королевство Аэдирн"
- AED_democratic:0 "Аэдирн"
- AED_democratic_DEF:0 "Аэдирн"
+ AED_democratic:0 "ФР Аэдирн"
+ AED_democratic_DEF:0 "ФР Аэдирн"
  AED_neutrality:1 "Королевство Аэдирн"
  AED_neutrality_DEF:1 "Королевство Аэдирн"
  AED_communism:0 "Республика Аэдирн"
