Новый стиль карты

--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -15,6 +15,22 @@
  CTR_DEF:0 "Цинтра"
  CTR_ADJ:0 "Цинтрийск."
  
+ VRD_fascism:0 "Королевство Вердэн"
+ VRD_fascism_DEF:0 "Королевство Вердэн"
+ VRD_democratic:0 "Республика Вердэн"
+ VRD_democratic_DEF:0 "Республика Вердэн"
+ VRD_neutrality:1 "Королевство Вердэн"
+ VRD_neutrality_DEF:1 "Королевство Вердэн"
+ VRD_communism:0 "Республика Вердэн"
+ VRD_communism_DEF:0 "Республика Вердэн"
+ VRD_fascism_ADJ:0 "Вердэнск."
+ VRD_democratic_ADJ:0 "Вердэнск."
+ VRD_neutrality_ADJ:0 "Вердэнск."
+ VRD_communism_ADJ:0 "Вердэнск."
+ VRD:0 "Вердэн"
+ VRD_DEF:0 "Вердэн"
+ VRD_ADJ:0 "Вердэнск."
+ 
  RIV_fascism:0 "Королевство Ривия"
  RIV_fascism_DEF:0 "Королевство Ривия"
  RIV_democratic:0 "Консилорат Ривия"
