--- a/WItcherMap/localisation/state_names_l_russian.yml
+++ b/WItcherMap/localisation/state_names_l_russian.yml
@@ -109,12 +109,12 @@
  STATE_108:0 "Фоланни"
  STATE_109:0 "Ортагор"
  STATE_110:1 "Фоланни"
- STATE_111:0 "Хиндарсвьялл"
+ STATE_111:0 "Хиндарсфьялл"
  STATE_112:0 "Ундвик"
  STATE_113:0 "Ленстер"
  STATE_114:1 "Северный Фаро"
  STATE_115:1 "Южный Фаро"
- STATE_116:0 "Севереный Фаро"
+ STATE_116:0 "Северный Фаро"
  STATE_117:0 "Южный Фаро"
  STATE_118:0 "Гибралтар"
  STATE_119:0 "Северная Ирландия"
