--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -15,6 +15,23 @@
  CTR_DEF:0 "Цинтра"
  CTR_ADJ:0 "Цинтрийск."
  
+ PAT_fascism:0 "Королевство Патидия"
+ PAT_fascism_DEF:0 "Королевство Патидия"
+ PAT_democratic:0 "Республика Патидия"
+ PAT_democratic_DEF:0 "Республика Патидия"
+ PAT_neutrality:1 "Патидия"
+ PAT_neutrality_DEF:1 "Патидия"
+ PAT_communism:0 "Республика Патидия"
+ PAT_communism_DEF:0 "Республика Патидия"
+ PAT_fascism_ADJ:0 "Патидийск."
+ PAT_democratic_ADJ:0 "Патидийск."
+ PAT_neutrality_ADJ:0 "Патидийск."
+ PAT_communism_ADJ:0 "Патидийск."
+ PAT:0 "Патидия"
+ PAT_DEF:0 "Патидия"
+ PAT_ADJ:0 "Патидийск."
+ 
+ 
  VRD_fascism:0 "Королевство Вердэн"
  VRD_fascism_DEF:0 "Королевство Вердэн"
  VRD_democratic:0 "Республика Вердэн"
@@ -30,6 +47,39 @@
  VRD:0 "Вердэн"
  VRD_DEF:0 "Вердэн"
  VRD_ADJ:0 "Вердэнск."
+ 
+ SHG_fascism:0 "Сирват Гийадзатту"
+ SHG_fascism_DEF:0 "Сирват Гийадзатту"
+ SHG_democratic:0 "Сирват Гийадзатту"
+ SHG_democratic_DEF:0 "Сирват Гийадзатту"
+ SHG_neutrality:1 "Сирват Гийадзатту"
+ SHG_neutrality_DEF:1 "Сирват Гийадзатту"
+ SHG_communism:0 "Сирват Гийадзатту"
+ SHG_communism_DEF:0 "Сирват Гийадзатту"
+ SHG_fascism_ADJ:0 "Гийадзаттуск."
+ SHG_democratic_ADJ:0 "Сирват Гийадзаттейск."
+ SHG_neutrality_ADJ:0 "Сирват Гийадзаттейск."
+ SHG_communism_ADJ:0 "Сирват Гийадзаттейск."
+ SHG:0 "Сирват Гийадзатту"
+ SHG_DEF:0 "Сирват Гийадзатту"
+ SHG_ADJ:0 "Сирват Гийадзаттейск."
+ 
+ 
+ ALA_fascism:0 "Королевство Аладжатту"
+ ALA_fascism_DEF:0 "Королевство Аладжатту"
+ ALA_democratic:0 "Республика Аладжатту"
+ ALA_democratic_DEF:0 "Республика Аладжатту"
+ ALA_neutrality:1 "Маликанат Аладжатту"
+ ALA_neutrality_DEF:1 "Маликанат Аладжатту"
+ ALA_communism:0 "Республика Аладжатту"
+ ALA_communism_DEF:0 "Республика Аладжатту"
+ ALA_fascism_ADJ:0 "Аладжаттийск."
+ ALA_democratic_ADJ:0 "Аладжаттийск."
+ ALA_neutrality_ADJ:0 "Аладжаттийск."
+ ALA_communism_ADJ:0 "Аладжаттийск."
+ ALA:0 "Аладжатту"
+ ALA_DEF:0 "Аладжатту"
+ ALA_ADJ:0 "Аладжаттийск."
  
  RIV_fascism:0 "Королевство Ривия"
  RIV_fascism_DEF:0 "Королевство Ривия"
@@ -209,8 +259,8 @@
  
  TSN_fascism:0 "Королевство Туссент"
  TSN_fascism_DEF:0 "Королевство Туссент"
- TSN_democratic:0 "Республика Туссент"
- TSN_democratic_DEF:0 "Республика Туссент"
+ TSN_democratic:0 "Туссентский Союз"
+ TSN_democratic_DEF:0 "Туссентский Союз"
  TSN_neutrality:1 "Королевство Туссент"
  TSN_neutrality_DEF:1 "Королевство Туссент"
  TSN_communism:0 "Республика Туссент"
@@ -526,6 +576,22 @@
  MHT:0 "Мехт"
  MHT_DEF:0 "Мехт"
  MHT_ADJ:0 "Мехтнизм."
+ 
+ SKU_fascism:0 "Каэдвен"
+ SKU_fascism_DEF:0 "Королевство Каэдвен"
+ SKU_democratic:0 "Республика Каэдвен"
+ SKU_democratic_DEF:0 "Республика Каэдвен"
+ SKU_neutrality:1 "Каэдвенский Союз"
+ SKU_neutrality_DEF:1 "Каэдвенский Союз"
+ SKU_communism:0 "Республика Каэдвен"
+ SKU_communism_DEF:0 "Республика Каэдвен"
+ SKU_fascism_ADJ:0 "Каэдвеннизм."
+ SKU_democratic_ADJ:0 "Каэдвеннизм."
+ SKU_neutrality_ADJ:0 "Каэдвеннизм."
+ SKU_communism_ADJ:0 "Каэдвеннизм."
+ SKU:0 "Каэдвен"
+ SKU_DEF:0 "Каэдвен"
+ SKU_ADJ:0 "Каэдвенск."
  
  GER_fascism:0 "Третий рейх"
  GER_fascism_DEF:0 "Третий рейх"
