--- a/WItcherMap/localisation/countries_l_russian.yml
+++ b/WItcherMap/localisation/countries_l_russian.yml
@@ -19,8 +19,8 @@
  PAT_fascism_DEF:0 "Королевство Патидия"
  PAT_democratic:0 "Республика Патидия"
  PAT_democratic_DEF:0 "Республика Патидия"
- PAT_neutrality:1 "Патидия"
- PAT_neutrality_DEF:1 "Патидия"
+ PAT_neutrality:1 "Маликанат Патидия"
+ PAT_neutrality_DEF:1 "Маликанат Патидия"
  PAT_communism:0 "Республика Патидия"
  PAT_communism_DEF:0 "Республика Патидия"
  PAT_fascism_ADJ:0 "Патидийск."
